<resources>
    <string name="app_name">English Learn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

    <string name="my_image">My Image</string>

    <string name="mypic1">Apple</string>
    <string name="mypic2">Ball</string>
    <string name="mypic3">Cow</string>
    <string name="mypic4">Dog</string>
    <string name="mypic5">Elephant</string>
    <string name="mypic6">Flag</string>
    <string name="mypic7">Goat</string>
    <string name="mypic8">Hen</string>
    <string name="mypic9">Icecream</string>
    <string name="mypic10">Juice</string>
    <string name="mypic11">King</string>
    <string name="mypic12">Lion</string>
    <string name="mypic13">Mango</string>
    <string name="mypic14">Nest</string>
    <string name="mypic15">Orange</string>
    <string name="mypic16">Parrot</string>
    <string name="mypic17">Queen</string>
    <string name="mypic18">River</string>
    <string name="mypic19">Sun</string>
    <string name="mypic20">Tiger</string>
    <string name="mypic21">Umbrella</string>
    <string name="mypic22">Van</string>
    <string name="mypic23">Wolf</string>
    <string name="mypic24">Xylophone</string>
    <string name="mypic25">Yak</string>
    <string name="mypic26">Zebra</string>

    <string name="hi_start_learn_english">Hi children, Let us start to learn English words. </string>
    <string name="hi_about_me">Hi everyone,I am Ramish a Sophomore Computer Engineering Student at Sliet University(SLIETIAN).
    I have done diploma from Aligarh Muslim University(A.M.U.)(ALIGS).I thanks to all my friends and classmates who help me to develop this application software. </string>

    <string name="prevbutton">PrevButton</string>
    <string name="nextbutton">nextButton</string>
    <string name="again">Again</string>
    <string name="spelling">Spell</string>
    <string name="message_teachers_parents">Respected Teachers and Parents this application software has been specially designed for children to learn English alphabets and words.Please install this application and also motivate children to learn through this application.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_quiz">Quiz</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="teachers_image">Teachers Image</string>
    <string name="parents_image">Parents Image</string>
    <string name="next_screen_icon">Next Screen Icon</string>


</resources>
