<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f06292"
    tools:context=".AlphabetActivity">



    <androidx.gridlayout.widget.GridLayout
        android:layout_width="320dp"
        android:layout_height="560dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/a"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"
            android:onClick="buttonTapped"
            android:text="@string/a"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/b"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/b"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/c"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/c"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"

            app:layout_row="0" />

        <Button
            android:id="@+id/d"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/d"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/e"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/e"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/f"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/f"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/g"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/g"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/h"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/h"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/i"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/i"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/j"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/j"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/k"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/k"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/l"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"
            android:onClick="buttonTapped"
            android:text="@string/l"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/m"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/m"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/n"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/n"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/o"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/o"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/p"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/p"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/q"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/q"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/r"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/r"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/s"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/s"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/t"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/t"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/u"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/u"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/v"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/v"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/w"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/w"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/x"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/x"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="5" />

        <ImageButton

            android:layout_width="80dp"
            android:layout_height="80dp"

            app:srcCompat="@drawable/previous_screen"
            android:onClick="previousScreen"
            app:layout_column="0"
            app:layout_row="6" />


        <Button
            android:id="@+id/y"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#F41414"

            android:onClick="buttonTapped"
            android:text="@string/y"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="6" />

        <Button
            android:id="@+id/z"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#055F81"

            android:onClick="buttonTapped"
            android:text="@string/z"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="6" />

        <ImageButton

            android:layout_width="80dp"
            android:layout_height="80dp"

            app:srcCompat="@drawable/next_screen"
            android:onClick="nextScreen"
            app:layout_column="3"
            app:layout_row="6" />

    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>